port(rendering): Early rendering port